--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "scarab-backup"
 version = "0.1.0"
-description = "A CLI-utility using Rsync to back up to external drives manually"
+description = "A CLI-utility to run backups to external drives manually"
 authors = ["Podolski, Malte <malte.podolski@web.de>"]
 readme = "README.md"
 packages = [{ include = "app" }]
@@ -13,6 +13,7 @@ cement = "^3.0.8"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
 black = "^23.7.0"
+pytest-cov = "^4.1.0"
 
 [tool.black]
 line-length = 100
