--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ python = "^3.10"
 cement = "^3.0.8"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.0"
 black = "^23.7.0"
+pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
+pytest-mock = "^3.11.1"
 
 [tool.black]
 line-length = 100
