Add pyright config and type annotations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
 
+[tool.pyright]
+typeCheckingMode = "strict"
+
 [tool.black]
 line-length = 100
 
