--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{ include = "app" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-cement = "^3.0.8"
+cement = {extras = ["colorlog", "jinja2", "yaml"], version = "^3.0.8"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
