--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{ include = "app" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-cement = {extras = ["colorlog", "jinja2", "yaml"], version = "^3.0.8"}
+cement = { extras = ["colorlog", "jinja2", "yaml"], version = "^3.0.8" }
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
@@ -18,6 +18,7 @@ pytest-mock = "^3.11.1"
 
 [tool.pyright]
 typeCheckingMode = "strict"
+reportUnnecessaryTypeIgnoreComment = "true"
 
 [tool.black]
 line-length = 100
