--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
       "request": "launch",
       "module": "app.main",
       "console": "integratedTerminal",
-      "justMyCode": true
+      "justMyCode": true,
+      "args": ["--debug"]
     },
     {
       "name": "app.main backup --source /path",
@@ -16,7 +17,7 @@
       "module": "app.main",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "args": ["backup", "--source", "/path"]
+      "args": ["--debug", "backup", "--source", "/path"]
     },
     {
       "name": "File",
