replace temp_dir_fixture with pytests tmp_path

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ pytest-mock = "^3.11.1"
 typeCheckingMode = "strict"
 reportUnnecessaryTypeIgnoreComment = "true"
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+# Must be set to home-directory to test for var-expansion
+addopts = "--basetemp /home/malte/pytest-temp-scarab"
+
 [tool.black]
 line-length = 100
 
