--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,33 +17,15 @@
       "module": "app.main",
       "console": "integratedTerminal",
       "justMyCode": true,
-      "args": ["--debug", "backup", "--source", "/path"]
+      "args": ["backup", "--source", "/path"]
     },
     {
-      "name": "app.main -q backup --source /invalid",
-      "type": "python",
-      "request": "launch",
-      "module": "app.main",
-      "console": "integratedTerminal",
-      "justMyCode": true,
-      "args": ["-q", "backup", "--source", "/path"]
-    },
-    {
-      "name": "app.main backup --dest /path",
-      "type": "python",
-      "request": "launch",
-      "module": "app.main",
-      "console": "integratedTerminal",
-      "justMyCode": true,
-      "args": ["--debug", "backup", "--dest", "/path"]
-    },
-    {
-      "name": "File",
+      "name": "Current File",
       "type": "python",
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "justMyCode": true
+      "args": []
     }
   ]
 }
