--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = "^23.7.0"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
+isort = "^5.12.0"
 
 [tool.pyright]
 typeCheckingMode = "strict"
