--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 pytest-mock = "^3.11.1"
 isort = "^5.12.0"
+typing-extensions = "^4.7.1"
 
 [tool.pyright]
 typeCheckingMode = "strict"
